--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,12 @@
     "wave-ui": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.32.3",
-    "@babel/eslint-parser": "^7.32.3",
+    "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.23.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   }
